# mqt-qcec-bench

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  flake.nix  gen_benchmark_big.py  get_circuits.py  plot.py  plot.rs  run.sh
circuits/: dj_mapped_ibm_washington_qiskit_opt0_8.qasm  dj_mapped_ibm_washington_qiskit_opt3_8.qasm  dj_nativegates_ibm_qiskit_opt0_8.qasm  dj_nativegates_ibm_qiskit_opt3_8.qasm  grover-noancilla_mapped_ibm_washington_qiskit_opt0_8.qasm  grover-noancilla_mapped_ibm_washington_qiskit_opt3_8.qasm  grover-noancilla_nativegates_ibm_qiskit_opt0_8.qasm  grover-noancilla_nativegates_ibm_qiskit_opt3_8.qasm  shor_15_4_mapped_ibm_washington_qiskit_opt1_18.qasm  shor_15_4_mapped_ibm_washington_qiskit_opt2_18.qasm  shor_15_4_nativegates_ibm_qiskit_opt0_18.qasm  shor_15_4_nativegates_ibm_qiskit_opt2_18.qasm
cmake/: ExternalDependencies.cmake
configs/: benchmark_big.toml  benchmark_small.toml  checker_diff.toml  checker_proportional.toml
include/: bench.h  config.h  instance.h  trial.h
src/: CMakeLists.txt  bench.cpp  config.cpp  instance.cpp  main.cpp  trial.cpp
